# vgs-proxy-examples

./: .gitignore  README.md
.circleci/: config.yml
android/: README.md
android/app/: build.gradle
android/docker/: Dockerfile
android/gradle/wrapper/: gradle-wrapper.properties
c99/: CMakeLists.txt  Dockerfile  README.md  libcurl-post-vgs.c  libcurl-post-vgs.h  main.c  openssl-post-vgs.c  openssl-post-vgs.h
c99/docker/clang-base-image/: Dockerfile
cs/: Dockerfile  cs.sln  cs.userprefs
cs/example/: Example.cs  example.csproj
cs/test/: ExampleTest.cs  test.csproj
go/: .editorconfig  Dockerfile  glide.yaml
go/test/: example_test.go
java/: Dockerfile  pom.xml
node-payment-form/: README.md  package.json
node-payment-form/views/: index.hbs  layout.hbs
nodejs/: .snyk  Dockerfile  cert.pem  example.js  package-lock.json  package.json
perl/: Dockerfile  example.pl
php/: Dockerfile  composer.json  docker-compose.yml  example.php
python/: .env  Dockerfile  enrichment.py  example.py  requirements.txt
ruby/: Dockerfile  Gemfile  example.rb
rust/: Dockerfile  cert.der
rust/rust_proxy_example/: Cargo.toml
rust/rust_proxy_example/src/: main.rs
scala/: Dockerfile
scala/scala-example/: .editorconfig  build.sbt
selenium/: Dockerfile  docker-compose.yml  example.py  post_token.js  requirements.txt
selenium/.me/: main.py
selenium/proxy_ext/: background.js
vb/: Dockerfile  README.md  vb.sln
vb/vb/: Example.vb  Web.config  packages.config  vb.vbproj
vb/vb.Tests/: App.config  packages.config  vb.Tests.vbproj
vb/vb/Views/: Web.config
(+54 files in other folders)
