[package]
name = "vgs_proxy_test"
version = "0.1.0"
authors = ["joeviveiros"]

[dependencies]
hyper = "0.11.6"
hyper-tls =  "0.1.2"
futures = "0.1"
tokio-core = "0.1"
http = "0.1"
envy = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
fake = "1.2.1"
url = "1.5.1"
base64 = "0.8.0"

reqwest = { git = "https://github.com/seanmonstar/reqwest" }
